# -Backend--

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/api/: contact.py  dependencies.py  system.py
app/core/: config.py  errors.py  exception_handlers.py  logging.py  middleware.py
app/models/: schemas.py
app/repositories/: contact_repository.py  database.py  rate_limit_repository.py
app/services/: ai_service.py  contact_service.py  email_service.py
postman/: Developer-Portfolio-API.postman_collection.json
scripts/: setup-deepseek.ps1
static/: app.js  index.html  styles.css
tests/: conftest.py  test_ai_service.py  test_api.py
